k8s-deployer/k8sYamls/queue-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-service
  labels:
    dixa-app: queue-service
spec:
  selector:
    dixa-app: queue-service
  ports:
    - port: 80
      targetPort: 8080
