k8s-deployer/k8sYamls/queue-service/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: queue-service
spec:
  host: queue-service.default.svc.cluster.local
