k8s-deployer/k8sYamls/queue-service/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: queue-service
spec:
  hosts:
  - queue-service
  http:
  - name: 'production'
    route:
    - destination:
        host: queue-service
      weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
    # mirror:
    #   host: queue-service.svc.cluster.local
    #   subset: chaos-canary
    # mirrorPercentage: 
    #   value: 10
    # fault:
    #   delay:
    #     percentage:
    #       value: 0.1
    #     fixedDelay: 2s
    #   abort:
    #     percentage:
    #       value: 0.1
    #     httpStatus: 500
